tests/error/function_arg_no_size.gw
// [contains] cannot declare variables of size
 function void test(void v){}
